# cc-framework

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cartographer.patch  game.csv  package-lock.json  protocol_smoke_test.jsonl  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cartographer-comment.yml  cartographer.yml  ci.yml  docs.  docs.yml  pre-commit-config.yml
.hypothesis/constants/: 0204793d05decfb5  020df1c89ece9ba8  040685208c10a5eb  0f3d2b937396fcbd  1317faa9096e81fa  19de895c16c37f9d  1a2d12860a9bf6ad  208074cf58a59db0  25013a09f60db91e  2530a9075e590b0f  2b2acb2e1896e509  393a11f3fc925545  3a131600b88be0e9  42bdf01092892aea  459bee43b6ab76d1  45bb66b76dabb6b4  4c2fd4ebf323c245  4d003232e274a8e7  51a3cefbb3884b4c  54c7ce3894985ba3  5a717cd9d420be5e  6c16bc1c0abe6bf1  7062da612f8b37b7  71ef3df19691fa58  7c3f59817b3d555c  7d394ce87a2fe970  7e80dc68398e8da9  86e4c3ed25ebfcdc  89ae0847a510aa3a  8c662c8c37173f17  8f0e74f16dcc8336  918c8e4b0efd29b1  932c886e345bdbcf  94b9be3858723627  9812056506a1b713  9c7daf8dac48cb15  9d3019d9d3d4f72e  9da66eb79fbb84fb  a50fdbc1ce06e81b  b8de16529bcb528f  (+23 more)
.hypothesis/examples/04e6b3400353b141/: 250c412b9bca18c4  7283eda7e187c543  80da26743b77ffe8
.hypothesis/examples/250c412b9bca18c4/: c3e43cbf11fda778
.hypothesis/examples/7283eda7e187c543/: 01214ba163279c10  016a699945147691  024a9ca7e6fea23a  049b6836b359d852  04bbb576159b1bd9  051e8577418fea66  075632199a70f3a0  080c1f459cfa0d6c  0823a36362618cf2  08b5411fe476ce8e  0920f757518ad4ed  09c6c38f8f414114  0b72df90c5eef526  0ca8916de0e041c3  0e84e77ddcf0b656  0fe9a2972a89407c  11618dae0479945b  11c08b5e7024fb9b  13040e18b1b2cf5b  14cafcefab96972f  1648a90b42c436e6  171e5159f050b996  178b9ea2475e7303  17b0e7e785ff8d28  17b1091f095d9c39  18ea9b134ba62a7d  190aacbc9f7f401f  1959901a9bc76fc6  19eebebc77fa54f4  1a8883c1dabbb8ca  (+279 more)
cc/: __init__.py
checkpoints/: week6_keyword_calibrated.yaml
checkpoints/exp_1759035035/: checkpoint_000101.json  final_results.json
checkpoints/exp_1759139664/: checkpoint_000100.json  final_results.json
checkpoints/smoke_test/: checkpoint_000100.json  checkpoint_000200.json  final_results.json
datasets/attack_prompts/: basic.txt
datasets/benign/: example1.txt  example2.txt
datasets/examples/: rails_tiny.csv  synthetic.csv
deployment/conda/: env.yaml
docs/: ADAPTER_TESTING.md  dev_setup.md  developer_manual.md  experiments-guide.md  index.md  reproducibility.md  research-development-guide.md  week5_memo.md  week6_memo.md
docs/architecture/: protocol_sequence.md  storage_layout.md
docs/audit/: CC-Framework-PhD-Audit.md  Executive-Summary.md  Quick-Ref-Checklist.md  Top5-Priorities.md
docs/design-specs/: guardrail_api.md
docs/governance/: dataset-card-template.md  model-guardrail-card-template.md  risk_taxonomy.yaml
docs/memos/: 2025-09-03-week2.md  2025-09-12-week3-memo.md
docs/theory/: cc_derivations.md
evaluation/reports/: readiness_report.md
examples/: adapter_cliff_plot.py  adapter_disagreement_summary.py  minimal_toy_run.py
experiments/: run.py  two_world_game_phd.py  two_world_game_phd.py.bak
experiments/configs/: guardrail_week6.yaml  mvp.yaml  smoke.yaml  toy.yaml  two_world.yaml  week5_pilot.yaml  week6_and.yaml  week6_keyword.yaml  week6_or.yaml  week6_regex.yaml  week6_semantic.yaml
experiments/correlation_cliff/: README.md  agent.md  analyze_bootstrap.py  baselines.py  batch_real_rails.py  benchmark_overlap.py  config_s1.yaml  figures.py  guardrail_adapters.py  run_all.py  run_real_guardrails.py  simulate.py  simulate_legacy.py  theory.py  theory_analysis.py  theory_core.py
experiments/fh_atlas/: __init__.py  config.py  generate.py  manifest.py  plots.py  sample_config.json  simulate_dependence.py
experiments/grids/: next.json
figures/: publication_figures.html
notebooks/: 01_toy_model_validation.ipynb  02_two_world_experiments.ipynb  03_scaling_runtime.ipynb
paper/: draft.md  main.tex
paper/figures/: theorem1_visual.html
paper/sections/: 01_introduction.tex  02_foundation.tex  02_framework.tex  03_identification.tex  03_prereg.tex
results/emergent/: run_meta.json  sweep.csv  sweep_parallel.csv  sweep_reps.csv
results/week5_scan/: analysis.json  calibration_summary.json  scan.csv
runs/: audit.jsonl  audit.jsonl.bak  game_week2.csv  week3_meth  week3_smoke.json
runs/manifest/: bundle_test.json  bundle_test.jsonl
scripts/: bca_bootstrap.py  calibrate_guardrail.py  compute_fh_envelope.py  compute_independence.py  generate_ccc.py  generate_paper_draft.py  generate_rails_demo.py  make_power_curve.py  make_week3_figs.py  make_week5_figs.py  make_week6_figs.py  make_week7_figs.py  make_week7_runs.py  plot_cc_curves.py  rails_compare.py  run_fh_atlas.py  run_with_checks.py  summarize_results.py  test_nemo.py  verify_attestation.py  write_week7_memo.py
scripts/generate_figures/: figure1_cc_heatmap.py  figure2_fh_bounds.py
src/cc/: __init__.py
src/cc_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
summaries/: week7_summary.json
tests/: _factories.py  conftest.py  test_fh_bounds_selfcheck.py  test_week2_deliverables.py  test_week7.py
tests/experiments/: test_experiment_leak_metrics.py
tests/integration/: test_e2e_ledger_attestation.py  test_rails_compare.py  test_week6_writeback_and_alpha.py
tests/performance/: test_adapter_perf.py
tests/unit/: test_adapter_audit_invariants.py  test_attackers.py  test_bernstein_monotonicity.py  test_cartographer_audit_chain.py  test_cc_bernstein_coverage.py  test_cc_metrics.py  test_composite_guardrails.py  test_fail_closed_semantics.py  test_fh_atlas.py  test_generate_figures_legacy.py  test_guardrail_adapter_evaluate.py  test_guardrails.py  test_models_serialization.py  test_output_parsing_properties.py  test_planner.py  test_protocol.py  test_registry.py  test_vendor_forward_compat.py  test_week5.py  test_week_3_ci_and_audit.py
theory/: fh_bounds.py  fh_bounds_v2_sandbox.py  test_fh_bounds.py
tools/: two_world_game.py  week6_artifact.html
(+193 files in other folders)
