# pyproject.toml
"""
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc"
version = "0.1.0"
description = "Composability Coefficient (CC) framework for measuring guardrail interactions"
authors = [{name="Pranav Bhave"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11", 
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3",
    "seaborn>=0.12",
    "plotly>=5.0",
    "jsonlines>=3.0",
    "cryptography>=41.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=23.0", "mypy>=1.5"]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --cov=src --cov-report=term-missing"
pythonpath = ["src"]
"""